remove get single user endpoint
